syntax="proto3";
package pb; // determina o nome do pacote, pode ser criado qualquer nome ?? creio que sim
option go_package = "./;pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserResultStream {
    string status = 1;
    User user = 2;
}

message Users {
    repeated User user = 1;
}

service UserService {
    rpc AddUser (User) returns (User);
    rpc AddUserDetails (User) returns (stream UserResultStream);
    rpc AddUsers (stream User) returns (Users);
    rpc AddUserStreamBoth(stream User) returns (stream UserResultStream);
}
